# datasource_migration

./: .gitignore  README.md  config.ini  pyproject.toml
mapping_files/: 180byTwo Oracle to LR Mappings.csv  Alliant_Segment_Mapping.csv  Audience_Town_Segments_Mapping.csv  dstillery-to-lr-mapping.csv  lr_dstillery_mapping.csv  lr_dstillery_mapping_missed.csv  onaudience_cats.csv  test.csv
match_finder/: __init__.py  create_mapping_file.py  enrich_mapping_with_sizes.py  enrich_with_sizes.py  find_and_enrich.py  get_current_sizes.py  matcher.py
match_finder/needs_match/: data.csv
match_finder/similarity_too_low/: data_with_size.csv
match_finder/suggested_match/: data.csv  data_with_size.csv
python/: add_advertiser_taxonomy.py  audience_expressions_replace_with_sharethis.py  audience_reach_oracle_vs_liveramp.py  audience_service.py  ds11-to-ds35.py  fix_fpa_taxonomies.py  liveramp_service.py  load_experian_taxonomy_into_experian_categories.py  map_dscids_to_new_datasource.py  test.py  version_2_map_dscids_to_new_datasource.py
python/activation_api/: activation_api.py
python/integration_repository/: IntegrationRepository.py
python/schema/: create_test_experian_categories.sql
python/utils/: Logger.py  authorization.py  config.py  data_source_util.py  db_util.py  request_util.py
qa_size/: 20250515_150329_dstillery-to-lr-mapping_with_size.csv
taxonomy_files/: DIGITAL_MASTER_DATA_20240911_072.metadata.jsonl  test.jsonl
